--- a/roles/apache/handlers/main.yml
+++ b/roles/apache/handlers/main.yml
@@ -1,2 +1,14 @@
 ---
 # handlers file for apache
+
+- name: Reload firewalld
+  service:
+    name: firewalld
+    state: reloaded
+  when: ansible_os_family == 'RedHat'
+
+- name: Reload ufw
+  service:
+    name: ufw
+    state: reloaded
+  when: ansible_os_family == 'Debian'
