Actualiza virtualhost.conf para que vaya a la IP del servidor

--- a/files/virtualhost.conf
+++ b/files/virtualhost.conf
@@ -1,10 +1,11 @@
 
 <VirtualHost *:80>
-	ServerName rocky.taller.uy
+	ServerName 192.168.56.103
 	ServerAdmin sysadmin@taller.uy 
+	ProxyPreserveHost On 
 
-	ProxyPass /todo/ http://rocky.taller.uy:8080/todo/
-	ProxyPassReverse /todo/ http://rocky.taller.uy:8080/todo/
+	ProxyPass /todo/ http://192.168.56.103:8080/todo/
+	ProxyPassReverse /todo/ http:192.168.56.103:8080/todo/
 
 	DocumentRoot /var/www/web/html
 
@@ -15,4 +16,3 @@
 	</Directory>
 
 </VirtualHost>
-
