--- a/roles/apache/handlers/main.yml
+++ b/roles/apache/handlers/main.yml
@@ -7,8 +7,21 @@
     state: reloaded
   when: ansible_os_family == 'RedHat'
 
+- name: Restart apache
+  service:
+    name: httpd
+    state: restarted
+  when: ansible_os_family == 'RedHat'
+
 - name: Reload ufw
   service:
     name: ufw
     state: reloaded
   when: ansible_os_family == 'Debian'
+
+- name: Restart apache
+  service:
+    name: apache2
+    state: restarted
+  when: ansible_os_family == 'Debian'
+
