--- a/roles/firewall.debian/tasks/main.yml
+++ b/roles/firewall.debian/tasks/main.yml
@@ -1,2 +1,19 @@
 ---
 # tasks file for firewall.debian
+
+- name:  Configuracion Firewall  en Debian
+    ufw:
+      rule: "{{ item.rule }}"
+      direction: "{{ item.direction }}"
+      state: "{{ item.state }}"
+    with_items:
+  { rule: 'deny', direction: 'incoming', state: 'yes' }
+  { rule: 'allow', direction: 'outgoing', state: 'yes' }
+  when: ansible_os_family == 'Debian'
+
+- name: Habilitar UFW en Debian
+    ufw:
+    rule: allow
+    state: enabled
+  when: ansible_os_family == 'Debian'
+  
