--- a/PB_mariadb.yml
+++ b/PB_mariadb.yml
@@ -1,12 +1,13 @@
 ---
-- hosts: ubuntu
-  remote_user: sysadmin
+- hosts: debian
+  remote_user: ansible
   become: yes
   vars_files:
-    - dbpassword.yml
+    - pass.yml
     
   roles:
-     - role: mariadb
+    - role: mariadb
+      # - role: firewall.debian  
 
   tasks:
 
@@ -23,11 +24,11 @@
     mysql_user:
       login_unix_socket: /var/run/mysqld/mysqld.sock
       login_user: root
-      login_password: "{{ rootpass }}"
+      login_password: "{{ pass }}"
       check_implicit_admin: yes 
       name: root
       host: "{{ item }}"
-      password: "{{ rootpass }}" 
+      password: "{{ pass }}" 
     loop:
       - 127.0.0.1
       - localhost
@@ -37,7 +38,7 @@
     mysql_user:
       login_host: localhost
       login_user: root
-      login_password: "{{ rootpass }}"
+      login_password: "{{ pass }}"
       name: ""
       host_all: yes
       state: absent
@@ -46,6 +47,6 @@
     mysql_db:
       login_host: localhost
       login_user: root
-      login_password: "{{ rootpass }}"
+      login_password: "{{ pass }}"
       name: test
       state: absent
