--- a/roles/firewall.debian/tasks/main.yml
+++ b/roles/firewall.debian/tasks/main.yml
@@ -1,19 +1,29 @@
 ---
 # tasks file for firewall.debian
 
-- name:  Configuracion Firewall  en Debian
-    ufw:
-      rule: "{{ item.rule }}"
-      direction: "{{ item.direction }}"
-      state: "{{ item.state }}"
-    with_items:
-  { rule: 'deny', direction: 'incoming', state: 'yes' }
-  { rule: 'allow', direction: 'outgoing', state: 'yes' }
+- name:  Configuracion Firewall incoming allow  en Debian
+  ufw:
+    rule: allow 
+    direction: in 
+    state: enabled
   when: ansible_os_family == 'Debian'
 
-- name: Habilitar UFW en Debian
-    ufw:
-    rule: allow
+- name:  Configuracion Firewall outcoming deny  en Debian
+  ufw:
+    rule: deny
+    direction: out
     state: enabled
+  when: ansible_os_family == 'Debian'
+
+
+
+  #- name: Habilitar UFW en Debian
+  #ufw:
+          # state: enabled
+- name: ufw service enable and start
+  service:
+    name: ufw
+    state: started
+    enabled: yes
   when: ansible_os_family == 'Debian'
   
