--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -14,17 +14,17 @@
       state: started
     when: ansible_os_family == 'RedHat'
 
-    - name: Abrir el puerto 3306 en el firewall en RedHat
-      firewalld:
-        port: 3306/tcp
-        permanent: yes
-        state: enabled
-      when: ansible_os_family == 'RedHat'
-      notify: Reload firewalld
+  - name: Abrir el puerto 3306 en el firewall en RedHat
+    firewalld:
+      port: 3306/tcp
+      permanent: yes
+      state: enabled
+    when: ansible_os_family == 'RedHat'
+    notify: Reload firewalld
 
 
 
- - name: Mariadb server install
+  - name: Instalar mariadb en Debian
     apt:
       name: "{{ item }}"
       state: present
@@ -36,7 +36,7 @@
     when: ansible_os_family == 'Debian'
 
 
-  - name: Install PyMySQL with pip
+  - name: Instalar PyMySQL en Debian
     pip:
       name: PyMySQL
       executable: pip3
@@ -44,7 +44,7 @@
     when: ansible_os_family == 'Debian'
 
     
-  - name: Mariadb service enable and start
+  - name: Iniciar y habilitar el servicio mariadb en Debian
     service:
       name: mariadb
       state: started
@@ -52,12 +52,12 @@
     when: ansible_os_family == 'Debian'
     
 
-- name: Abrir el puerto 3306 en el firewall en Debian
+  - name: Abrir el puerto en el firewall en Debian
     ufw:
       rule: allow
-      port: 3306
+      port: '3306'
       proto: tcp
-      notify: Reload ufw
+      # notify: Reload ufw
     when: ansible_os_family == 'Debian'
   
 
