Actualizacion de PB_mariadb.yml para que solo cree bd y usuario para app web

--- a/PB_mariadb.yml
+++ b/PB_mariadb.yml
@@ -4,6 +4,7 @@
   become: yes
   vars_files:
     - pass.yml
+    - todopass.yml
     
   roles:
     - role: mariadb
@@ -11,42 +12,46 @@
 
   tasks:
 
-  - name: Configure mariadb to listen on all interfaces
-    lineinfile:
-      path: /etc/mysql/mariadb.conf.d/50-server.cnf
-      regexp: '^bind-address'
-      line: bind-address = 0.0.0.0
-    notify: Restart mariadb server
-
-
-#MySQL Secure Installation
-  - name: Update MariaDB root password
+  - name: Crear usuario todo en mariadb
     mysql_user:
-      login_unix_socket: /var/run/mysqld/mysqld.sock
       login_user: root
       login_password: "{{ pass }}"
-      check_implicit_admin: yes 
-      name: root
+      name: todo
       host: "{{ item }}"
-      password: "{{ pass }}" 
+      priv: '*.*:ALL,GRANT'
+      password: "{{ todopass }}"
     loop:
       - 127.0.0.1
       - localhost
       - 192.168.56.%
 
-  - name: Delete anonymous user
-    mysql_user:
-      login_host: localhost
-      login_user: root
-      login_password: "{{ pass }}"
-      name: ""
-      host_all: yes
-      state: absent
+    - name: Crear base de datos todo en mariadb
+      mysql_db:
+        login_user: root
+        login_password: "{{ pass }}"
+        name: todo
 
-  - name: Delete test database
-    mysql_db:
-      login_host: localhost
-      login_user: root
-      login_password: "{{ pass }}"
-      name: test
-      state: absent
+        
+    - name: Crear directorio para repositorio sql
+      file:
+        path: /ansible/sql
+        state: directory
+
+
+    - name: Copiar statament de la bd todo a la ruta
+      copy:
+        src: ./files/statement_todo.sql
+        dest: /ansible/sql/statement_todo.sql
+        
+
+    -name: Crear estructura bd todo
+     mysql_db:
+       login_user: root
+       login_password: "{{ pass }}"
+       name: todo
+       state: present
+       target: /ansible/sql/statement_todo.sql
+
+  
+      
+
