Actualizacion del PB_updates

--- a/PB_updates.yml
+++ b/PB_updates.yml
@@ -5,27 +5,23 @@
 
   tasks:
 
-  - name: Actualizar los paquetes disponibles en RedHat
-    dnf:
+  - name: Update all available packages for RedHat servers
+    yum:
       name: "*"
       state: latest
+    notify: Restart server
     when: ansible_os_family == "RedHat"
 
-  - name: Reiniciar RedHat
-    reboot:
-    when: ansible_os_family == "RedHat"
-
-
-
-  - name: Actualizar los paquetes disponibles en Debian
+  - name: Update all available packages for Debian servers
     apt:
       name: "*"
       state: latest
       update_cache: yes
+    notify: Restart server
     when: ansible_os_family == "Debian" 
 
 
-  - name: Reiniciar Debian
-    reboot:
-    when: ansible_os_family == "Debian"
-  
+  handlers:
+
+  - name: Restart server
+    reboot:   
