--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -29,7 +29,7 @@
 
   - name: Instalar apache Debian
     apt:
-      name: httpd
+      name: apache2
       state: present
     when: ansible_os_family == 'Debian'
 
